--- a/stat2_guide.ipynb
+++ b/stat2_guide.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e3bccbe4",
+   "id": "73bc222e",
    "metadata": {},
    "source": [
     "- 통계적 가설검정은 표본을 사용해서 모집단에 대한 통계적인 판단을 내리는 방법\n",
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "6b995579",
+   "id": "11307ba3",
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "0812c750",
+   "id": "742ede4d",
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "2f1b11ad",
+   "id": "9bfd6b58",
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "55bb1ce6",
+   "id": "de5a9ed2",
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "258a406f",
+   "id": "f5deb802",
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "0b9abe7e",
+   "id": "d60df2d0",
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +171,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "3c2fe8dc",
+   "id": "03ec7143",
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f882ad4d",
+   "id": "9aecbe16",
    "metadata": {},
    "source": [
     "- 대응표본 t검정 : 약을 먹기 전과 후의 체온의 차이를 보는 경우 사용\n",
@@ -204,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "03b6a63e",
+   "id": "dd6f2c7d",
    "metadata": {},
    "outputs": [
     {
@@ -325,7 +325,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "3fbf63bc",
+   "id": "a0b0fc1e",
    "metadata": {},
    "outputs": [
     {
@@ -353,7 +353,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "0ec0a163",
+   "id": "edcd68a3",
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +376,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "48a16152",
+   "id": "bf9f5511",
    "metadata": {},
    "outputs": [
     {
@@ -409,7 +409,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "1b612c5f",
+   "id": "91c7de48",
    "metadata": {},
    "outputs": [
     {
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "734e70af",
+   "id": "9089994e",
    "metadata": {},
    "source": [
     "- 카이제곱 검정(chi-squared test) 또는 χ2 검정은 카이제곱 분포에 기초한 통계적 방법으로, 관찰된 빈도가 기대 빈도와 통계적으로 다른지를 판단하는 검증방법임.\n",
@@ -450,7 +450,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "8c8643c4",
+   "id": "bc7c96d9",
    "metadata": {},
    "outputs": [
     {
@@ -532,7 +532,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "3e6fc3d9",
+   "id": "06c50e85",
    "metadata": {},
    "outputs": [
     {
@@ -602,7 +602,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "0134f32d",
+   "id": "4c556e55",
    "metadata": {},
    "outputs": [
     {
@@ -629,7 +629,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "554968a7",
+   "id": "d1586802",
    "metadata": {},
    "source": [
     "[과제]  \n",
@@ -642,7 +642,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f8f4148",
+   "id": "ea79a4c6",
    "metadata": {},
    "source": [
     "수리모델 : 현상을 수식으로 표현한 모델. 맥주 매상 = 20 + 4 * 기온\n",
@@ -658,7 +658,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "1949e4fe",
+   "id": "229c389b",
    "metadata": {},
    "outputs": [
     {
@@ -683,7 +683,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "119f27ac",
+   "id": "774eb7f6",
    "metadata": {},
    "outputs": [
     {
@@ -768,7 +768,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "a79d48de",
+   "id": "1aaea5cc",
    "metadata": {},
    "outputs": [
     {
@@ -802,7 +802,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "ef60b46f",
+   "id": "ef4c752a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -813,7 +813,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "b8746783",
+   "id": "2adf33b1",
    "metadata": {},
    "outputs": [
     {
@@ -917,7 +917,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61e2144d",
+   "id": "e85666e5",
    "metadata": {},
    "source": [
     "#### 해석 : 기온이 맥주 매상에 영향을 미친다는 것을 알 수 있음\n",
@@ -956,7 +956,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0637c595",
+   "id": "e2c36d76",
    "metadata": {},
    "source": [
     "[과제]  \n",
@@ -970,7 +970,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "78d589c6",
+   "id": "79198984",
    "metadata": {},
    "outputs": [
     {
@@ -992,7 +992,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "cd4d6591",
+   "id": "d54599ce",
    "metadata": {},
    "outputs": [
     {
@@ -1014,7 +1014,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "50bca782",
+   "id": "435a405b",
    "metadata": {},
    "outputs": [
     {
@@ -1040,7 +1040,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "9b252eeb",
+   "id": "8ddd3c34",
    "metadata": {},
    "outputs": [
     {
@@ -1063,7 +1063,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "6452487b",
+   "id": "0e6a3eda",
    "metadata": {},
    "outputs": [
     {
@@ -1086,7 +1086,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "5975d482",
+   "id": "b889138d",
    "metadata": {},
    "outputs": [
     {
@@ -1110,7 +1110,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "878128ee",
+   "id": "d57a97f5",
    "metadata": {},
    "outputs": [
     {
@@ -1132,7 +1132,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "144f99bb",
+   "id": "e57bb5c9",
    "metadata": {},
    "outputs": [
     {
@@ -1160,7 +1160,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "bdd95876",
+   "id": "62fe549e",
    "metadata": {},
    "outputs": [
     {
@@ -1188,7 +1188,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "d1163acd",
+   "id": "8770238c",
    "metadata": {},
    "outputs": [
     {
@@ -1214,7 +1214,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "266a0d40",
+   "id": "59708fb6",
    "metadata": {},
    "outputs": [
     {
@@ -1240,7 +1240,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "1f1dcbf1",
+   "id": "b00bc71b",
    "metadata": {},
    "outputs": [
     {
@@ -1261,7 +1261,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "3eb0af3f",
+   "id": "8ccbf72a",
    "metadata": {},
    "outputs": [
     {
@@ -1285,7 +1285,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "6c4d97e3",
+   "id": "e97e4538",
    "metadata": {},
    "outputs": [
     {
@@ -1306,7 +1306,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "ff5119d4",
+   "id": "e544e907",
    "metadata": {},
    "outputs": [
     {
@@ -1346,7 +1346,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "18c4030b",
+   "id": "5f25d4fe",
    "metadata": {},
    "outputs": [
     {
@@ -1380,7 +1380,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "298848b9",
+   "id": "27643c10",
    "metadata": {},
    "outputs": [
     {
@@ -1403,7 +1403,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f225003d",
+   "id": "b01a5c1a",
    "metadata": {},
    "source": [
     "### 분산분석\n",
@@ -1431,7 +1431,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d99cc93",
+   "id": "68eeeab9",
    "metadata": {},
    "source": [
     "#### 검정의 다중성\n",
@@ -1443,7 +1443,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8efbf3df",
+   "id": "6dd7972d",
    "metadata": {},
    "source": [
     "#### 분산분석의 직감적 사고방식 : F비\n",
@@ -1459,7 +1459,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "8d506e10",
+   "id": "cd08532d",
    "metadata": {},
    "outputs": [
     {
@@ -1555,7 +1555,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "e7a7e8e8",
+   "id": "1334262d",
    "metadata": {},
    "outputs": [
     {
@@ -1590,7 +1590,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "6ed1adfa",
+   "id": "d5a8abb4",
    "metadata": {},
    "outputs": [
     {
@@ -1659,7 +1659,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "9baf306d",
+   "id": "fd262d0b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1670,7 +1670,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "45758687",
+   "id": "c5e078d0",
    "metadata": {},
    "outputs": [
     {
@@ -1694,7 +1694,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "c882d620",
+   "id": "2ef6bd8f",
    "metadata": {},
    "outputs": [
     {
@@ -1722,7 +1722,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "501485df",
+   "id": "ba040e87",
    "metadata": {},
    "outputs": [
     {
@@ -1745,7 +1745,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "58227657",
+   "id": "a7e73bba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1756,7 +1756,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "e3140698",
+   "id": "7ad769e2",
    "metadata": {},
    "outputs": [
     {
@@ -1779,7 +1779,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "c3ff576f",
+   "id": "179a2eb0",
    "metadata": {},
    "outputs": [
     {
@@ -1802,7 +1802,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "f23199fa",
+   "id": "28267836",
    "metadata": {},
    "outputs": [
     {
@@ -1825,7 +1825,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "80c915e1",
+   "id": "0ddc1658",
    "metadata": {},
    "outputs": [
     {
@@ -1847,7 +1847,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "ee4aff2d",
+   "id": "1b257f11",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1858,7 +1858,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "a819d6ec",
+   "id": "895613a2",
    "metadata": {},
    "outputs": [
     {
@@ -1925,8 +1925,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
-   "id": "52c5ecb4",
+   "execution_count": 70,
+   "id": "dc395e98",
    "metadata": {},
    "outputs": [
     {
@@ -1938,13 +1938,39 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "anova_model.params"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5b3e699f",
+   "metadata": {},
+   "source": [
+    "[도전 과제]\n",
+    "#### FIFA 데이터는 가상의 온라인 축구게임에 등장하는 축구 선수의 주요 특징과 신체 정보에 대한 데이터이다.\n",
+    "- 변수는 'ID', 'Name', 'Age', 'Nationality', 'Overall', 'Club', 'Preferred_Foot', 'Work_Rate', 'Position', 'Jersey_Number', 'Contract_Valid_Until','Height', 'Weight_lb', 'Release_Clause', 'Value', 'Wage'와 같다.\n",
+    "\n",
+    "Q1. FIFA데이터에서 각 선수의 키는 Heghit변수에 피트와 인치로 입력되어 있습니다. 이를 cm로 변환하여 새로운 변수 Height_cm을 생성하시오. \n",
+    "( “ ' ” 앞의 숫자는 피트이며, “ ' ” 뒤의 숫자는 인치, 1피트 = 30cm, 1인치 = 2.5cm)\n",
+    "\n",
+    "Q2. 포지션을 의미하는 Position변수를 아래 표를 참고하여 “Forward”, “Midfielder”,“Defender”, “GoalKeeper”로 재범주화하고, 변환하여 Position_Class 라는 변수를 생성하고 저장하시오.\n",
+    "\n",
+    "- Forward : ['LS','ST','RS','LW','LF','CF','RF','RW']\n",
+    "- Midfielder : ['LAM','CAM','RAM','LM','LCM','CM','RCM','RM']\n",
+    "- Defender : ['LBW','LDM','CDM','RDM','RWB','LB','LCB','CB','RCB','RB']\n",
+    "- GoalKeeper\n",
+    "\n",
+    "Q3) 새로 생성한 Position_Class 변수의 각 범주에 따른 Value(선수의 시장가치)의 평균값의 차이를 비교하는 일원배치 분산분석을 수행하고 결과를 해석하시오. \n",
+    "\n",
+    "Q4) Preferred Foot(주로 사용하는 발)과 Position_Class(재범주화 된 포지션)변수에 따라 Value(이적료)의 차이가 있는지를 알아보기 위해 이원배치분산분석을 수행하고 결과를 해석하시오.\n",
+    "\n",
+    "Q5)Age, Overall, Wage, Height_cm, Weight_lb 가 Value에 영향을 미치는지 알아보는 회귀분석을 단계적 선택법을 사용하여 수행하고 결과를 해석하시오. "
    ]
   }
  ],
