--- a/분류평가_guide.ipynb
+++ b/분류평가_guide.ipynb
@@ -323,7 +323,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "27db1a08",
+   "id": "3af73238",
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +350,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "d2a65b4e",
+   "id": "2673b2a3",
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +404,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "f10cda2e",
+   "id": "5f1afb69",
    "metadata": {},
    "outputs": [
     {
@@ -439,7 +439,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "d74ace4e",
+   "id": "2c444eab",
    "metadata": {},
    "outputs": [
     {
@@ -468,7 +468,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "72d4bebf",
+   "id": "bdcd5810",
    "metadata": {},
    "outputs": [
     {
@@ -527,7 +527,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "5de95509",
+   "id": "c5bddff5",
    "metadata": {},
    "outputs": [
     {
@@ -570,7 +570,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "75609e78",
+   "id": "367ce455",
    "metadata": {},
    "outputs": [
     {
@@ -617,7 +617,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b7f10c8",
+   "id": "fe48b871",
    "metadata": {},
    "source": [
     "#### 결과 해석\n",
@@ -640,7 +640,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "985c1539",
+   "id": "b8954eba",
    "metadata": {},
    "source": [
     "#### ROC 곡선과 AUC\n",
@@ -655,7 +655,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "f0dd8d04",
+   "id": "3ee21762",
    "metadata": {},
    "outputs": [
     {
@@ -687,7 +687,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "9b0b3c19",
+   "id": "30ad2053",
    "metadata": {},
    "outputs": [
     {
@@ -713,7 +713,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "a62e2e3b",
+   "id": "7fac5e3b",
    "metadata": {},
    "outputs": [
     {
@@ -750,7 +750,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "c5a3ba55",
+   "id": "ccb992f6",
    "metadata": {},
    "outputs": [
     {
@@ -771,7 +771,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "2ab8b800",
+   "id": "ad959da3",
    "metadata": {},
    "outputs": [
     {
@@ -805,7 +805,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c36cea3e",
+   "id": "884395a3",
    "metadata": {},
    "source": [
     "#### 과제\n",
@@ -815,6 +815,105 @@
     "- min_samples_split : [2,3,5]\n",
     "- min_samples_leaf: [1,5,8]\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "b7448038",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8044692737430168"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.tree import DecisionTreeClassifier \n",
+    "y_titanic_df = titanic_df['Survived']\n",
+    "X_titanic_df = titanic_df.drop('Survived',axis=1)\n",
+    "X_titanic_df = transform_features(X_titanic_df)\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X_titanic_df, y_titanic_df,\n",
+    "                                                   test_size=0.2, random_state=11)\n",
+    "\n",
+    "dt_clf = DecisionTreeClassifier()\n",
+    "dt_clf.fit(X_train,y_train)\n",
+    "pred = dt_clf.predict(X_test)\n",
+    "accuracy_dt = accuracy_score(y_test,pred)\n",
+    "accuracy_dt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "81569d44",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GridSearchCV(cv=5, estimator=DecisionTreeClassifier(),\n",
+      "             param_grid={'max_depth': [2, 3, 5, 10],\n",
+      "                         'min_samples_leaf': [1, 5, 8],\n",
+      "                         'min_samples_split': [2, 3, 5]},\n",
+      "             scoring='accuracy')\n",
+      "GridSearchCV 최적 하이퍼 파라미터: {'max_depth': 3, 'min_samples_leaf': 5, 'min_samples_split': 2}\n",
+      "GridSeachCV 최고 정확도: 0.7992\n",
+      "DecisionTreeClassifier(max_depth=3, min_samples_leaf=5)\n",
+      "grid_dt 예측 정확도 : 0.8715083798882681\n",
+      "오차 행렬\n",
+      "[[109   9]\n",
+      " [ 14  47]]\n",
+      "\n",
+      "정확도: 0.8715, 정밀도: 0.8393, 재현율: 0.7705,    F1: 0.8034, AUC:0.8937\n"
+     ]
+    }
+   ],
+   "source": [
+    "#  GridSearchCV : 교차검증과 성능 개선을 위한 하이퍼파라미터 튜닝을 동시에 수행\n",
+    "# 교차 검증을 기반으로 하이퍼 파라미터의 최적 값을 찾게 해줌\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "from sklearn.metrics import accuracy_score, precision_score , \\\n",
+    "recall_score ,confusion_matrix, f1_score, roc_auc_score\n",
+    "\n",
+    "parameters = {'max_depth':[2,3,5,10], 'min_samples_split':[2,3,5],\\\n",
+    "              'min_samples_leaf':[1,5,8]}\n",
+    "\n",
+    "grid_dclf = GridSearchCV(dt_clf, param_grid=parameters, scoring='accuracy', \\\n",
+    "                         cv=5, refit=True)\n",
+    "grid_dclf.fit(X_train, y_train)\n",
+    "print(grid_dclf)\n",
+    "print('GridSearchCV 최적 하이퍼 파라미터:', grid_dclf.best_params_)\n",
+    "print('GridSeachCV 최고 정확도: {0:.4f}'.format(grid_dclf.best_score_))\n",
+    "\n",
+    "best_dclf = grid_dclf.best_estimator_\n",
+    "print(best_dclf)\n",
+    "dpredictions = best_dclf.predict(X_test)\n",
+    "dpred_proba = best_dclf.predict_proba(X_test)[:,1]\n",
+    "accuracy = accuracy_score(y_test, dpredictions)\n",
+    "print('grid_dt 예측 정확도 :', accuracy)\n",
+    "\n",
+    "def get_clf_eval(y_test , dpredictions, dpred_proba):\n",
+    "    confusion = confusion_matrix( y_test, dpredictions)\n",
+    "    accuracy = accuracy_score(y_test , dpredictions)\n",
+    "    precision = precision_score(y_test , dpredictions)\n",
+    "    recall = recall_score(y_test , dpredictions)\n",
+    "    f1 = f1_score(y_test,dpredictions)\n",
+    "    roc_auc = roc_auc_score(y_test, dpred_proba)\n",
+    "    print('오차 행렬')\n",
+    "    print(confusion)\n",
+    "    print()    \n",
+    "    print('정확도: {0:.4f}, 정밀도: {1:.4f}, 재현율: {2:.4f},\\\n",
+    "    F1: {3:.4f}, AUC:{4:.4f}'.format(accuracy, precision, recall, f1, roc_auc))\n",
+    "get_clf_eval(y_test , dpredictions, dpred_proba)"
    ]
   }
  ],
